@@ -2,6 +2,11 @@
 -----------------------
 - Fixes Unwanted APFS Data Volume Entries
   * APFS data volumes could sometimes appear as boot options due to inadequate filtering
+- Fixes SubScreen Boots
+  * Boots from subscreens, such as after pressing F2, were handled as generic UEFI files
+  * This resulted in some processes being skipped or unwanted processes being applied
+  * RefindPlus now tries to make such boots specific as follows:
+    - `Opencore`, `Clover`, `Linux`, `MacOS`, `Windows` and `Misc Others`
 - Fixes Misc Items
   * Always block UEFI Windows NVRAM items (Disregard Volatility)
   * Misidentification of certain volume types as HFS+ volumes
